Source Code/Front-End/VIEW/CSS/main.css
/* ... */
.search__title h6{
  color: #858585;
  font-size: 1.3em;
}
.search__form{
  display: flex;
}
.search__input{
  width: 100%;
  height: auto;
  background-color: inherit;
}
.search__input input{
  width: 100%;
  height: 30px;
  outline:none;
  border: 1px solid lightblue;
  border-radius: 3px;
  padding-left: 5px;
  background-color: #ffffff;
  font-family: verdana;
}
.search__input input:focus{
  background-color: white;
}
.unoccupied_beds{
  width: 50%;
  height: 200px;
  background-color: #ffffff;
}
.adddoctor__main--emptybeds{
  display: flex;
}
.adddoctor__content--nurse{
  width: 50%;
}
/*****Responsiveness******/


/***** Media Quries *****/
@media only screen and (max-width: 1024px) {
	.wrapper{
		width:90%;
	}
}

/*  GO FULL WIDTH AT LESS THAN 640 PIXELS */
@media only screen and (max-width: 640px) {

	.wrapper{
		width:95%;
	}
}

/*  GO FULL WIDTH AT LESS THAN 480 PIXELS */
@media only screen and (max-width: 480px) {

	.wrapper{
		width:95%;
	}
}
/*  GO FULL WIDTH AT LESS THAN 360 PIXELS */
@media only screen and (max-width: 360px) {

	.wrapper{
		width:95%;
	}
}

/*  GO FULL WIDTH AT LESS THAN 240 PIXELS */
@media only screen and (max-width: 240px) {

	.wrapper{
		width:100%;
	}
}

